modules/fs/main/default/objects/WorkOrder/fields/AdditionalSkills__c.field-meta.xml
<CustomField>
    <fullName>AdditionalSkills__c</fullName>
    <label>Additional Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>