modules/fs/main/default/objects/WorkOrder/fields/Fixed_Issue__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Issue__c</fullName>
    <label>Fixed Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Partially</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>