modules/fs/main/default/objects/WorkOrder/fields/PartsStatus__c.field-meta.xml
<CustomField>
    <fullName>PartsStatus__c</fullName>
    <label>Parts Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parts Required</fullName>
            </value>
            <value>
                <fullName>Part Delivered</fullName>
            </value>
            <value>
                <fullName>Waiting For Parts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>