modules/fs/main/default/objects/WorkOrder/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chargeability</fullName>
            </value>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Parts Needed</fullName>
            </value>
            <value>
                <fullName>Actual Duration Inadequate</fullName>
            </value>
            <value>
                <fullName>Unit Issue</fullName>
            </value>
            <value>
                <fullName>Additional Skills Needed</fullName>
            </value>
            <value>
                <fullName>Couldn&apos;t Fulfill Due To Other Engagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>