modules/fs/main/default/objects/WorkOrder/fields/Total_Major_Items_Completed__c.field-meta.xml
<CustomField>
    <fullName>Total_Major_Items_Completed__c</fullName>
    <description>Count of Total Major Items  Completed</description>
    <label>Total Major Items Completed</label>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Type__c</field>
        <operation>equals</operation>
        <value>Major</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Status</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>