modules/fs/main/default/objects/WorkOrder/fields/Total_Major_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Major_Line_Items__c</fullName>
    <description>Total Count of Major Work Order Line Items</description>
    <label>Total Major Line Items</label>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Type__c</field>
        <operation>equals</operation>
        <value>Major</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>