modules/fs/main/default/objects/WorkOrder/validationRules/ActualPartsDeliveryToBePastOrToday.validationRule-meta.xml
<ValidationRule>
    <fullName>ActualPartsDeliveryToBePastOrToday</fullName>
    <active>true</active>
    <errorConditionFormula>ActualPartsDelivery__c  &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>ActualPartsDelivery__c</errorDisplayField>
    <errorMessage>Actual Parts Delivery Must Be Either In Past Or Today.</errorMessage>
</ValidationRule>