modules/fs/main/default/objects/WorkOrder/validationRules/Mark_Reason_Required_On_Checkbox_True.validationRule-meta.xml
<ValidationRule>
    <fullName>Mark_Reason_Required_On_Checkbox_True</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( Mark_For_Supervisor_Review__c ,ISBLANK(TEXT( Reason__c )))</errorConditionFormula>
    <errorDisplayField>Reason__c</errorDisplayField>
    <errorMessage>Reason is mandatory</errorMessage>
</ValidationRule>