modules/fs/main/default/objects/WorkOrder/validationRules/ValidationRuleForSupervisor.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationRuleForSupervisor</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISPICKVAL(PartsStatus__c, &quot;Part Delivered&quot;),
   ISBLANK(ActualPartsDelivery__c)) &amp;&amp; OR($Profile.Name  == &apos;CSR Supervisor&apos;,$Profile.Name  == &apos;Mechanic User&apos;)</errorConditionFormula>
    <errorDisplayField>ActualPartsDelivery__c</errorDisplayField>
    <errorMessage>You Must Enter A Date</errorMessage>
</ValidationRule>