modules/fs/main/default/objects/WorkOrder/listViews/Awaiting_Parts.listView-meta.xml
<ListView>
    <fullName>Awaiting_Parts</fullName>
    <columns>Name</columns>
    <columns>UnitNumber__c</columns>
    <columns>Status</columns>
    <columns>PartsStatus__c</columns>
    <columns>ForecastedPartsDelivery__c</columns>
    <columns>ActualPartsDelivery__c</columns>
    <columns>AdditionalSkills__c</columns>
    <columns>Reason__c</columns>
    <columns>ServiceTerritory</columns>
    <columns>Route__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PartsStatus__c</field>
        <operation>equals</operation>
        <value>Waiting For Parts</value>
    </filters>
    <filters>
        <field>ForecastedPartsDelivery__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Reason__c</field>
        <operation>equals</operation>
        <value>Parts Needed</value>
    </filters>
    <label>Awaiting Parts</label>
</ListView>