modules/fs/main/default/objects/WorkOrder/listViews/Review_Items_for_SVP.listView-meta.xml
<ListView>
    <fullName>Review_Items_for_SVP</fullName>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>Status</columns>
    <columns>Priority</columns>
    <columns>Mark_For_Supervisor_Review__c</columns>
    <columns>Comments__c</columns>
    <columns>Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Mark_For_Supervisor_Review__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Review Items For SVP</label>
    <sharedTo>
        <role>CSRAdmin</role>
        <role>CSRSupervisor</role>
    </sharedTo>
</ListView>