modules/fs/main/default/objects/WorkOrder/listViews/WO_With_Parts_Missing.listView-meta.xml
<ListView>
    <fullName>WO_With_Parts_Missing</fullName>
    <columns>Name</columns>
    <columns>Asset</columns>
    <columns>Status</columns>
    <columns>PartsStatus__c</columns>
    <columns>Reason__c</columns>
    <columns>AdditionalSkills__c</columns>
    <columns>ForecastedPartsDelivery__c</columns>
    <columns>ActualPartsDelivery__c</columns>
    <columns>Comments__c</columns>
    <columns>Mark_For_Supervisor_Review__c</columns>
    <columns>CreatedDate</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reason__c</field>
        <operation>equals</operation>
        <value>Parts Needed</value>
    </filters>
    <filters>
        <field>Mark_For_Supervisor_Review__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PartsStatus__c</field>
        <operation>equals</operation>
        <value>Parts Required</value>
    </filters>
    <label>WorkOrders with Parts Missing</label>
</ListView>